# halide-tutorials

./: .gitignore  CMakeLists.txt  hpx_runtime.cpp
apps/: CMakeLists.txt
apps/conv_layer/: CMakeLists.txt  conv_layer_generator.cpp  process.cpp
apps/iir_blur/: CMakeLists.txt  filter.cpp  iir_blur_generator.cpp
apps/nl_means/: CMakeLists.txt  nl_means_generator.cpp  process.cpp
experiments/conv_layer/: CMakeLists.txt  process.cpp  run_parametrized.sh
experiments/conv_layer/hpx/: CMakeLists.txt  process.cpp
experiments/iir_blur/: CMakeLists.txt  filter.cpp  filter_hpx.cpp  hpx_runtime.cpp  run_parametrized.sh
experiments/iir_blur/hpx/: CMakeLists.txt  filter.cpp
experiments/nl_means/: CMakeLists.txt  process.cpp  run_parametrized.sh
experiments/nl_means/hpx/: CMakeLists.txt  process.cpp
experiments/performance/: CMakeLists.txt  doubler.cpp  doubler_generator.cpp  hpx.cpp  profiling.cpp
hpx/: CMakeLists.txt  loopy.cpp  loopy_counter.cpp  main.cpp
hpx/apps/conv_layer/: process.cpp
hpx/apps/conv_layer/hpx/: CMakeLists.txt  process.cpp
hpx/apps/harris/: CMakeLists.txt  filter.cpp  hpx_runtime.cpp
hpx/apps/harris/hpx/: CMakeLists.txt  filter.cpp
hpx/blur/: CMakeLists.txt  blur_generator.cpp
hpx/blur_aot/: CMakeLists.txt  blur_aot.cpp  blur_run.cpp  hpx_runtime.cpp
hpx/brighten_aot/: CMakeLists.txt  brighten_aot.cpp  brighten_run.cpp  hpx_runtime.cpp
hpx/brighten_image/: CMakeLists.txt
hpx/hello_world/: CMakeLists.txt  main.cpp
linear_algebra/benchmarks/: CMakeLists.txt  halide_benchmarks.cpp
performance/: CMakeLists.txt  doubler.cpp  doubler_generator.cpp
scripts/: benchmark_wip.py  profiling.py  vtune.sh
tutorial_01/: CMakeLists.txt  tutorial_01.cpp
tutorial_02/: CMakeLists.txt  tutorial_02.cpp
tutorial_03/: CMakeLists.txt  gradient.html  tutorial_03.cpp
tutorial_10/: CMakeLists.txt  tutorial_10_gen.cpp  tutorial_10_run.cpp
